<resources>
    <string name="app_name">SFU Surge</string>

    <!-- Input activity -->
    <string name="input_description">Enter your details for event check-in.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sfu_email">SFU Email</string>
    <string name="input_warning">All fields must be filled in.</string>

    <!-- Scan activity -->
    <string name="welcome_me">Welcome</string>
    <string name="events">Events</string>
    <string name="action">Scan the event tag now.</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_first_name_default">Brad</string>
    <string name="pref_last_name_default">Bart</string>
    <string name="pref_email_default">myemail@sfu.ca</string>
    <string name="pref_reset_button_key">reset</string>
    <string name="reset_summary">Reset all your settings and restart the application.</string>
    <string name="confirm_reset_dialog">Are you sure you want to reset the app? All information you entered will be removed.</string>
    <string name="cancel">Cancel</string>

    <!-- Images -->
    <string name="logo_content_description">SFU Surge logo</string>
</resources>
