<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="first_name"
        android:title="First Name"
        android:defaultValue="@string/pref_first_name_default" />
    <EditTextPreference
        android:key="last_name"
        android:title="Last Name"
        android:defaultValue="@string/pref_last_name_default" />
    <EditTextPreference
        android:key="email"
        android:title="SFU Email"
        android:defaultValue="@string/pref_email_default" />

</PreferenceScreen>
