<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="#2a3479"
    tools:context=".ScanActivity">

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_margin="10dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/title_activity_settings"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings"
        android:background="@null"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ScanActivity">

        <TextView
            android:id="@+id/scan_activity_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:gravity="center"
            android:text="@string/welcome_me"
            android:textColor="#e2e2e2"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:layout_gravity="center"
            android:padding="40dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/logo_content_description" />

        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:gravity="center"
            android:text="@string/action"
            android:textColor="#e2e2e2"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>